# mark-app

./: CHANGELOG.md  DECISIONS.md  ECOSYSTEM.md  HANDOFF_PROMPT.md  JOURNAL.md  MARK_CONTEXT.md  MODULE_SCORES.md  README.md  SYNC_PROBLEM_CONTEXT.md  TAGPANEL_CONTEXT.md  debug_build_output.txt  index.html  package-lock.json  package.json  patch_v4.js  recipients.json  tailwind.config.js
.github/workflows/: build.yml  debug-build.yml
docs/: REVIEW_GROUPS.md  index.html
scripts/: eventhistory-sweep-proof.js  find-categorized-events.js  find-review-groups.js  sync-version.js
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge_script.js  main.rs
src/components/: ErrorTagModal.jsx  ErrorTimeline.jsx  EventsSidebar.jsx  TagPanel.jsx  TaggedEventsList.jsx  UpdateBanner.jsx
src/data/: matches.js  roster.js  shortcuts.js  tagging_scenarios.js
src/firebase/: config.js
src/hooks/: useAdmin.js  useAuth.jsx  useSync.js  useUpdateCheck.js
src/pages/: AuditPage.jsx  AuditReportPage.jsx  LoginPage.jsx  ObserverPage.jsx  ReviewPage.jsx  SessionHistoryPage.jsx  SessionSetupPage.jsx
src/utils/: exportSession.js  half.js
