[package]
name = "mark-app"
version = "2.9.5"
description = "MARK — Review App for Hudl Egypt"
authors = ["Ahmed Ashraf"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
rfd = "0.15"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
http-range = "0.1"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
jsonwebtoken = "9"
urlencoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_LibraryLoader",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
] }
