[package]
name = "mark-app"
version = "7.5.38"
description = "MARK — Review App for Hudl Egypt"
authors = ["Ahmed Ashraf"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
brotli-decompressor = "=5.0.1"
alloc-stdlib = "=0.2.2"
rfd = "0.15"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
http-range = "0.1"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
jsonwebtoken = "9"
urlencoding = "2"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
lettre = { version = "0.11", features = ["smtp-transport", "builder", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
# Pinned: a newer `time` release changed Parsable::parse()'s signature
# (now takes 2 args), which broke `cookie 0.18.1`'s call site (1 arg).
# Pin to the last compatible patch version until cookie/time publish a fix.
time = "=0.3.36"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_System_LibraryLoader",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Com",
  "Win32_Storage_FileSystem",
] }
